# internal/delivery/http/claim_controller.go
@@ -1,10 +1,12 @@
 package http
 
 import (
+	"fmt"
 	"strconv"
 
 	"github.com/gofiber/fiber/v2"
 	"github.com/sirupsen/logrus"
+	"github.com/thoriqwildan/aino-medical-be/internal/entity"
 	"github.com/thoriqwildan/aino-medical-be/internal/model"
 	"github.com/thoriqwildan/aino-medical-be/internal/usecase"
 )
@@ -174,5 +176,132 @@ func (c *ClaimController) Update(ctx *fiber.Ctx) error {
 		Code: fiber.StatusOK,
 		Message: "Claim updated successfully",
 		Data: response,
+	})
+}
+
+// @Router /api/v1/claims/{id} [get]
+// @Param  id path int true "Claim ID"
+// @Success 200 {object} model.ClaimResponseWrapper
+// @Failure 400 {object} model.ErrorWrapper "Bad Request"
+// @Failure 500 {object} model.ErrorWrapper "Internal Server Error"
+// @Tags Claims
+// @Security    BearerAuth api_key
+// @Summary Get a claim by ID
+// @Description Get a claim by its ID.
+// @Accept json
+func (c *ClaimController) GetById(ctx *fiber.Ctx) error {
+	id := ctx.Params("id")
+	if id == "" {
+		return fiber.NewError(fiber.StatusBadRequest, "ID is required")
+	}
+
+	// Convert id to uint
+	var idUint uint
+	_, err := fmt.Sscanf(id, "%d", &idUint)
+	if err != nil {
+		return fiber.NewError(fiber.StatusBadRequest, "Invalid ID format")
+	}
+
+	response, err := c.UseCase.GetClaim(ctx.Context(), idUint)
+	if err != nil {
+		c.Log.WithError(err).Error("Error getting claim by ID")
+		return err
+	}
+
+	return ctx.Status(fiber.StatusOK).JSON(model.WebResponse[model.ClaimResponse]{
+		Code: fiber.StatusOK,
+		Message: "Department retrieved successfully",
+		Data: response,
+	})
+}
+
+// @Router /api/v1/claims/{id} [delete]
+// @Param id path string true "Claim ID"
+// @Success 200 {object} model.ClaimResponseWrapper
+// @Failure 400 {object} model.ErrorWrapper "Bad Request"
+// @Failure 500 {object} model.ErrorWrapper "Internal Server Error"
+// @Tags Claims
+// @Security    BearerAuth api_key
+// @Summary Delete a claim
+// @Description Delete a claim with the provided details.
+// @Accept json
+func (c *ClaimController) Delete(ctx *fiber.Ctx) error {
+	id := ctx.Params("id")
+	if id == "" {
+		return fiber.NewError(fiber.StatusBadRequest, "ID is required")
+	}
+
+	idInt, err := strconv.Atoi(id)
+	if err != nil {
+		c.Log.WithError(err).Error("Invalid ID format for deletion")
+		return fiber.NewError(fiber.StatusBadRequest, "Invalid ID format")
+	}
+
+	err = c.UseCase.DeleteClaim(ctx.Context(), uint(idInt))
+	if err != nil {
+		c.Log.WithError(err).Error("Error deleting claim")
+		return err
+	}
+
+	return ctx.Status(fiber.StatusNoContent).JSON(model.WebResponse[any]{
+		Code: fiber.StatusNoContent,
+		Message: "Claim deleted successfully",
+	})
+}
+
+// @Router /api/v1/claims [get]
+// @Success 200 {object} model.ClaimResponseListWrapper
+// @Failure 400 {object} model.ErrorWrapper "Bad Request"
+// @Failure 500 {object} model.ErrorWrapper "Internal Server Error"
+// @Tags Claims
+// @Security    BearerAuth api_key
+// @Summary Find claims
+// @Description Find claims by their attributes.
+// @Param page query int false "Page number" default(1)
+// @Param limit query int false "Number of items per page" default(10)
+// @Param date_from query string false "Start date for filtering in YYYY-MM-DD format"
+// @Param date_to query string false "End date for filtering in YYYY-MM-DD format"
+// @Param department query string false "Department name for filtering"
+// @Param transaction_type query string false "Transaction type name for filtering"
+// @Param sla_status query string false "SLA status for filtering (e.g., meet, overdue)"
+// @Param claim_status query string false "Claim status for filtering (e.g., On Plafond, Over Plafond)"
+// @Param transaction_status query string false "Transaction status for filtering (e.g., Successful, Pending, Failed)"
+// @Accept json
+func (c *ClaimController) GetAll(ctx *fiber.Ctx) error {
+	transactionStatusStr := ctx.Query("transaction_status")
+	var transactionStatus entity.TransactionStatus
+	if transactionStatusStr != "" {
+		transactionStatus = entity.TransactionStatus(transactionStatusStr)
+	}
+
+	query := &model.ClaimFilterQuery{
+		Page: ctx.QueryInt("page", 1),
+		Limit: ctx.QueryInt("limit", 10),
+		DateFrom: ctx.Query("date_from"),
+		DateTo: ctx.Query("date_to"),
+		TransactionStatus: transactionStatus,
+		Department: ctx.Query("department"),
+		TransactionType: ctx.Query("transaction_type"),
+		SLAStatus: entity.SLA(ctx.Query("sla_status")),
+		ClaimStatus: entity.ClaimStatus(ctx.Query("claim_status")),
+	}
+
+	responses, total, err := c.UseCase.GetAll(ctx.Context(), query)
+	if err != nil {
+		c.Log.WithError(err).Error("Error fetching claims")
+		return err
+	}
+
+	paging := &model.PaginationPage{
+		Page: query.Page,
+		Limit: query.Limit,
+		Total: int(total),
+	}
+
+	return ctx.Status(fiber.StatusOK).JSON(model.WebResponse[[]model.ClaimResponse]{
+		Code: fiber.StatusOK,
+		Message: "Claims fetched successfully",
+		Data: &responses,
+		Meta: paging,
 	})
 }
